--- a/src/app/server-blueprint/server-blueprint.component.html
+++ b/src/app/server-blueprint/server-blueprint.component.html
@@ -1,9 +1,14 @@
 <div class="container">
-    <app-cockpit></app-cockpit>
+    <app-cockpit (serverCreated) = "onServerAdded($event)" (blueprintCreated) = "onBlueprintAdded($event)"></app-cockpit>
     <hr>
     <div class="row">
       <div class="col-xs-12">
-        <app-server-element *ngFor="let element of serverElements"></app-server-element>
+        <app-server-element *ngFor="let element of serverElements" [element] = "element">
+          <p #contentParagraph>
+            <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
+            <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>
+          </p>
+        </app-server-element>
       </div>
     </div>
 </div>  
