--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,9 @@
 			<!-- <app-warning></app-warning>
 			<app-success></app-success> -->
 			<!-- <div class="app-servers"></div> -->
-			<app-styling></app-styling>
+			<!-- <app-styling></app-styling> -->
 			<!-- <app-server-blueprint></app-server-blueprint> -->
+            <app-account-main></app-account-main>
 		</div>
 	</div>
 </div>
